AppShell: Suppress context menu in webviews

AppShell doesn't support context menus, but still needs to provide a
WebViewGuestDelegate to handle the context menu. Otherwise, we reach a
NOTREACHED() in WebContentsViewChildFrame::ShowContextMenu().

Also removes a WebViewGuestDelegate function that is unused (see
https://codereview.chromium.org/2836973002).

Bug: 820604
Change-Id: I0760d397384908a490704f23388e11c4eef113a5
Reviewed-on: https://chromium-review.googlesource.com/957596
Commit-Queue: Michael Giuffrida <michaelpg@chromium.org>
Reviewed-by: Lucas Gadani <lfg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544136}
Former-commit-id: 52e03fa8d8b81a0cff47ba7f56e83249fd218a10